--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "10-airbnb-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind": "tailwindcss -i ./views/input.css -o ./public/output.css --watch",
-    "start": "nodemon app.js & npm run tailwind"
+    "tailwind": "tailwindcss -i ./views/input.css -o ./public/output.css",
+    "build": "npm install && npm run tailwind",
+    "dev": "nodemon app.js & npm run tailwind --watch",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
@@ -21,10 +24,13 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.3",
     "multer": "^2.0.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "tailwindcss": "^3.4.17"
+    "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
